Edit hub content and test some features